added colors and font

--- a/index.css
+++ b/index.css
@@ -89,6 +89,10 @@ video {
     border: 0;
     font-size: 100%;
     vertical-align: baseline;
+    font-family: 'Inconsolata',
+    monospace;
+    font-family: 'Domine',
+    serif;
 }
 
 /* HTML5 display-role reset for older browsers */
