--- a/index.css
+++ b/index.css
@@ -142,6 +142,15 @@ table {
 }
 
 /* indexhtml*/
+header h1 {
+    align-items: center;
+    display: flex;
+}
+
+header nav {
+    display: flex;
+    justify-content: flex-end;
+}
 
 /*carosel*/
 .carosel {
