--- a/css/index.css
+++ b/css/index.css
@@ -88,10 +88,7 @@ video {
     padding: 0;
     border: 0;
     font-size: 100%;
-    font-family: 'Inconsolata',
-        monospace;
-    font-family: 'Domine',
-        serif;
+    font: inherit;
     vertical-align: baseline;
 }
 
@@ -135,4 +132,25 @@ q:after {
 table {
     border-collapse: collapse;
     border-spacing: 0;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    border: 2px solid red;
+}
+
+header nav a {
+    display: flex;
+    justify-content: space-around;
+    border: 2px solid green;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    border: 2px solid blue;
+
 }
