--- a/css/index.css
+++ b/css/index.css
@@ -88,7 +88,10 @@ video {
     padding: 0;
     border: 0;
     font-size: 100%;
-    font: inherit;
+    font-family: 'Inconsolata',
+        monospace;
+    font-family: 'Domine',
+        serif;
     vertical-align: baseline;
 }
 
@@ -134,23 +137,70 @@ table {
     border-spacing: 0;
 }
 
+.container {
+    width: 95%;
+
+    margin: 30px;
+}
+
+/*header*/
 header {
     display: flex;
     justify-content: center;
     align-content: center;
     border: 2px solid red;
+    margin: 20px;
+    padding: 15px;
+}
+
+header nav {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
 }
 
 header nav a {
-    display: flex;
     justify-content: space-around;
     border: 2px solid green;
 }
 
 h1 {
     display: flex;
-    justify-content: center;
-    align-content: center;
+    justify-content: flex-start;
     border: 2px solid blue;
+    width: 50%;
+    font-family: 'Inconsolata',
+        monospace;
 
+}
+
+/*General-styles*/
+img {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+    padding: 5px;
+
+}
+
+.top-img,
+.header-img,
+.middle-img .bottom-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*Footer styles*/
+.footer-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
 }
