--- a/css/index.css
+++ b/css/index.css
@@ -218,9 +218,9 @@ footer {
 }
 
 /*Mediasindex */
-@media (max-width: 800px) {
+@media screen and (max-width: 500px) {
     .container {
-        width: 800px;
+        width: 100%;
         margin: 0 auto;
         background-color: #10eaf0;
     }
@@ -259,7 +259,7 @@ footer {
             monospace;
 
     }
+}
 
-
-    /*abouthtml */
-    /*Mediasabout */
+/*abouthtml */
+/*Mediasabout */
