--- a/css/index.css
+++ b/css/index.css
@@ -187,6 +187,8 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 4px dotted rgb(42, 145, 185);
+    margin: 10px;
 }
 
 .button a {
